--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
 		"@changesets/cli": "^2.26.2",
 		"@commitlint/cli": "^17.7.1",
 		"@commitlint/config-conventional": "^17.7.0",
-		"@phi-school/eslint-config": "workspace:*",
+		"@phi.school/eslint-config": "workspace:*",
 		"@types/node": "^20.6.3",
 		"dotenv": "^16.3.1",
 		"eslint": "^8.49.0",
@@ -40,7 +40,7 @@
 	},
 	"eslintConfig": {
 		"extends": [
-			"@phi-school/eslint-config"
+			"@phi.school/eslint-config"
 		]
 	},
 	"lint-staged": {
