--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"@commitlint/cli": "^17.7.1",
 		"@commitlint/config-conventional": "^17.7.0",
 		"@phi.school/eslint-config": "workspace:*",
+		"@phi.school/prettier-config": "workspace:*",
 		"@types/node": "^20.6.3",
 		"dotenv": "^16.3.1",
 		"eslint": "^8.49.0",
@@ -46,5 +47,6 @@
 	"lint-staged": {
 		"*.{js,ts}": "eslint --cache --fix",
 		"*.{js,json,md,ts}": "prettier --write"
-	}
+	},
+	"prettier": "@phi.school/prettier-config"
 }
