build(ci): ensure eslint-config is built before linting and update triggers [skip ci]
- Modified CI workflow to build the eslint-config before linting.
- Added `build:eslint-config` script in package.json to facilitate this.
- Removed `push` trigger for `main` branch from CI workflow to avoid duplicate runs.

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 		"scripts/*"
 	],
 	"scripts": {
+		"build:eslint-config": "pnpm --dir ./packages/eslint-config build",
 		"build": "turbo build",
 		"create-package": "node scripts/create-package",
 		"dev": "turbo dev --no-cache --continue",
