--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,9 +1,6 @@
 name: Continuous Integration
 
 on:
-  push:
-    branches-ignore:
-      - 'main'
   pull_request:
     branches:
       - 'main'
@@ -20,6 +17,9 @@ jobs:
         with:
           enable-cache: 'true'
           project-path: './'
+
+      - name: Build necessary parts for Linting
+        run: devbox run -- pnpm build:eslint-config
 
       - name: Run Lint
         run: devbox run -- pnpm lint
